# porpoise

./: CLAUDE.md  CONTRIBUTING.md  README.md  biome.json  compose.yaml  index.html  package.json  plan.md  pnpm-lock.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
docker/mysql/init/: 01_seed.sql
docs/: ARCHITECTURE.md
scripts/: sync-version.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: connection.rs  export.rs  history.rs  import.rs  mod.rs  schema.rs  snippets.rs
src-tauri/src/db/: mod.rs  mysql_client.rs  ssh_tunnel.rs
src-tauri/src/storage/: keychain.rs  local_db.rs  mod.rs
src/components/: CellViewerModal.tsx  CommandPalette.tsx  ConnectingOverlay.tsx  ConnectionForm.tsx  CsvImportModal.tsx  DatabaseBrowser.tsx  EditorPanes.tsx  ErDiagram.tsx  SavedConnections.tsx  SettingsModal.tsx  ShortcutsModal.tsx  SqlEditor.tsx  StatusBar.tsx  TabBar.tsx  TableDetail.tsx  TablePalette.tsx  TableView.tsx  ToastStack.tsx
src/components/ui/: empty-state.tsx  kbd-hint.tsx  porpoise-mark.tsx  skeleton.tsx
src/lib/: codemirror-theme.ts  column-editor.ts  column-type.ts  fuzzy.ts  i18n.tsx  row-format.ts  settings.tsx  sql-lint.ts  status-color.ts  tab-status.tsx  tauri.ts  toast.tsx
